--- a/.github/workflows/auto-assign-project.yml
+++ b/.github/workflows/auto-assign-project.yml
@@ -8,7 +8,7 @@ on:
   issue_comment:
     types: [created]
 env:
-  MY_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  MY_GITHUB_TOKEN: ${{ secrets.AUTO_PROJECT_PAT }}
   BACKLOG_BOARD: 'https://github.com/users/craig8/projects/4'
 
 jobs:
