--- a/.github/workflows/auto-assign-project.yml
+++ b/.github/workflows/auto-assign-project.yml
@@ -7,26 +7,14 @@ on:
     types: [opened, labeled]
   issue_comment:
     types: [created]
-env:
-  MY_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  BACKLOG_BOARD: 'https://github.com/users/craig8/projects/4'
 
 jobs:
-  assign_one_project:
+  automate-project-columns:
     runs-on: ubuntu-latest
-    name: Assign to One Project
     steps:
-    - name: Assign NEW issues and NEW pull requests to project 3
-      uses: srggrs/assign-one-project-github-action@1.3.1
-      if: github.event.action == 'opened'
-      with:
-        project: '${{ env.BACKLOG_BOARD}}' 
-
-    # - name: Assign issues and pull requests with `bug` label to project 3
-    #   uses: srggrs/assign-one-project-github-action@1.3.1
-    #   if: |
-    #     contains(github.event.issue.labels.*.name, 'bug') ||
-    #     contains(github.event.pull_request.labels.*.name, 'bug')
-    #   with:
-    #     project: 'https://github.com/orgs/eclipse-volttron/projects/3'
+      - uses: alex-page/github-project-automation-plus@v0.8.1
+        with:
+          project: Team Backlog
+          column: New
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
     #     column_name: 'No Status'
