--- a/.github/workflows/auto-assign-project.yml
+++ b/.github/workflows/auto-assign-project.yml
@@ -3,19 +3,49 @@ name: Auto Assign to Project(s)
 on:
   issues:
     types: [opened, labeled]
-  pull_request:
+  pull_request_target:
     types: [opened, labeled]
   issue_comment:
     types: [created]
-#env:
-#  REPO_TOKEN: {{ secrets.AUTO_PROJECT_PAT }} 
+env:
+  MY_GITHUB_TOKEN: ${{ secrets.AUTO_PROJECT_PAT }}
+
 jobs:
-  automate-project-columns:
+  assign_one_project:
     runs-on: ubuntu-latest
+    name: Assign to One Project
     steps:
-      - uses: alex-page/github-project-automation-plus@v0.8.1
-        with:
-          project: Team Backlog
-          column: New
-          repo-token: ${{ secrets.AUTO_PROJECT_PAT }}
-    #     column_name: 'No Status'
+    - name: Assign NEW issues and NEW pull requests to project 2
+      uses: srggrs/assign-one-project-github-action@1.2.1
+      if: github.event.action == 'opened'
+      with:
+        project: 'https://github.com/srggrs/assign-one-project-github-action/projects/2'
+
+    - name: Assign issues and pull requests with `bug` label to project 3
+      uses: srggrs/assign-one-project-github-action@1.2.1
+      if: |
+        contains(github.event.issue.labels.*.name, 'bug') ||
+        contains(github.event.pull_request.labels.*.name, 'bug')
+      with:
+        project: 'https://github.com/srggrs/assign-one-project-github-action/projects/3'
+        column_name: 'Labeled'
+
+# on:
+#   issues:
+#     types: [opened, labeled]
+#   pull_request:
+#     types: [opened, labeled]
+#   issue_comment:
+#     types: [created]
+# #env:
+# #  REPO_TOKEN: {{ secrets.AUTO_PROJECT_PAT }} 
+# jobs:
+#   automate-project-columns:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: alex-page/github-project-automation-plus@v0.8.1
+#         with:
+#           project: Team Backlog
+#           column: New
+#           repo-token: ${{ secrets.AUTO_PROJECT_PAT }}
+#     #     column_name: 'No Status'
