--- a/.github/workflows/auto-assign-project.yml
+++ b/.github/workflows/auto-assign-project.yml
@@ -8,7 +8,7 @@ on:
   issue_comment:
     types: [created]
 env:
-  MY_GITHUB_TOKEN: ${{ secrets.AUTO_PROJECT_PAT }}
+  GITHUB_TOKEN: ${{ secrets.AUTO_PROJECT_PAT }}
 
 jobs:
   assign_one_project:
@@ -19,16 +19,16 @@ jobs:
       uses: srggrs/assign-one-project-github-action@1.2.1
       if: github.event.action == 'opened'
       with:
-        project: 'https://github.com/srggrs/assign-one-project-github-action/projects/2'
+        project: 'https://github.com/users/craig8/projects/4'
 
-    - name: Assign issues and pull requests with `bug` label to project 3
-      uses: srggrs/assign-one-project-github-action@1.2.1
-      if: |
-        contains(github.event.issue.labels.*.name, 'bug') ||
-        contains(github.event.pull_request.labels.*.name, 'bug')
-      with:
-        project: 'https://github.com/srggrs/assign-one-project-github-action/projects/3'
-        column_name: 'Labeled'
+    # - name: Assign issues and pull requests with `bug` label to project 3
+    #   uses: srggrs/assign-one-project-github-action@1.2.1
+    #   if: |
+    #     contains(github.event.issue.labels.*.name, 'bug') ||
+    #     contains(github.event.pull_request.labels.*.name, 'bug')
+    #   with:
+    #     project: 'https://github.com/srggrs/assign-one-project-github-action/projects/3'
+    #     column_name: 'Labeled'
 
 # on:
 #   issues:
