--- a/.github/workflows/auto-assign-project.yml
+++ b/.github/workflows/auto-assign-project.yml
@@ -8,7 +8,7 @@ on:
   issue_comment:
     types: [created]
 env:
-  GITHUB_TOKEN: ${{ secrets.AUTO_PROJECT_PAT }}
+  MY_GITHUB_TOKEN: ${{ secrets.AUTO_PROJECT_PAT }}
 
 jobs:
   assign_one_project:
